<resources>
    <string name="app_name">ProjectRocket</string>
    <string name="question">Cuando está _________ una doble linea amarilla en la calzada,¿En qué caso usted puede adelantar?</string>
    <string name="response">Escribe el complemento....</string>
    <string name="progress">5/10</string>
    <string name="educacion">Educacion Vial</string>
    <string name="normas">Normas de Circulacion</string>
    <string name="auxilios">Primeros Auxilios</string>
    <string name="señalizacion">Señalizacion y Accidentes</string>
    <string name="legislacion">Legislacion Boliviana</string>
    <string name="mecanica">Mecanica Basica</string>
    <string name="days5_rbtn">más de 5 días</string>
    <string name="days10_rbtn">más de 10 días</string>
    <string name="days15_rbtn">más de 15 días</string>
    <string name="days20_rbtn">más de 20 días</string>
    <string name="save_btn">Guardar</string>
    <string name="timeQuestion_txt">Selecciona la fecha para tu examen de conducción</string>
    <string name="todo">TODO</string>
    <string name="question1">"Esta señal pertenece a "</string>
    <string name="opcionEstacion">No estacionar</string>
    <string name="opcionfumar">No Fumar</string>
    <string name="opcionGirar">No girar en U</string>
    <string name="opcionstop">Stop</string>

    <!--TEXT QUESTION-->
    <string name="TextQuestion">El adelantamiento de un vehículo debe ser realizado por:</string>
    <string name="TextQuestionAnswer1">El lado derecho de la vía</string>
    <string name="TextQuestionAnswer2">El lado izquierdo de la vía</string>
    <string name="TextQuestionAnswer3">Nunca se debe adelantar</string>
    <string name="TextQuestionAnswer4">Depende la situación</string>
    <string name="progressIndicator">6/10</string>
    <string name="ImageAnswerQ1">¿Cuál de las siguientes imágenes pertenece a “Flujo convergente”?</string>
    <string name="puntaje">Puntaje:</string>
    <string name="numeroPuntaje">15/30</string>
    <string name="finish_section">Terminaste la seccion</string>
    <string name="ContinuarButton">Continuar</string>
    <string name="FinishButton">Terminar</string>
    <string name="title_activity_home__menu">activity_home_Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appName">PaquitaApp</string>
    <string name="menu_home">Menu</string>
    <string name="menu_gallery">Mi Prueba</string>
    <string name="menu_slideshow">Reiniciar</string>
    <string name="ConfirmarButton">confirmar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>