<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="#192A56"
    tools:context=".PuntajeSeccionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/textViewPuntaje"
            android:layout_width="417dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/puntaje"
            android:textColor="#F5F6FA"
            android:paddingTop="30dp"
            android:paddingBottom="50dp"
            android:textSize="54sp" />

        <TextView
            android:paddingTop="100dp"
            android:id="@+id/textViewNumeroPuntaje"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:lineSpacingExtra="36sp"
            android:text="@string/numeroPuntaje"
            android:textAlignment="center"
            android:textColor="#F5F6FA"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/textViewFinishSection"
            android:paddingTop="30dp"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_section"
            android:textColor="#F5F6FA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="15dp"
                android:background="@drawable/bg_btn_primary"
                android:fontFamily="@font/roboto"
                android:text="@string/ContinuarButton"
                android:textAllCaps="false"
                android:textColor="#F5F6FA"
                android:textSize="22sp" />

            <Button
                android:id="@+id/buttonFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:background="@drawable/bg_btn_red"
                android:fontFamily="@font/roboto"
                android:text="@string/FinishButton"
                android:textAllCaps="false"
                android:textColor="#F5F6FA"
                android:textSize="22sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>