<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.questionText.QuestionTextFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <Button
            android:id="@+id/buttonAnswer14"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_txt_white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/TextQuestionAnswer1"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTextView4" />

        <TextView
            android:id="@+id/questionTextView4"
            android:layout_width="0dp"
            android:layout_height="149dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_txt_white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="@string/TextQuestion"
            android:textColor="#000000"
            android:textSize="22dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonAnswer14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAnswer2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_txt_white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/TextQuestionAnswer2"
            android:textAllCaps="false"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAnswer14" />

        <Button
            android:id="@+id/buttonAnswer3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_txt_white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/TextQuestionAnswer3"
            android:textAllCaps="false"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAnswer2" />

        <Button
            android:id="@+id/buttonAnswer4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_txt_white"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/TextQuestionAnswer4"
            android:textAllCaps="false"
            android:textSize="21sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAnswer3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>