<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageQuestionActivity"
    android:background="#1C295B">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:progress="50"
        android:progressTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress" />
    <TextView
        android:id="@+id/progress"
        android:layout_width="64dp"
        android:layout_height="23dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:text="@string/progress"
        android:textColor="#FBFBFB"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<androidx.cardview.widget.CardView
        android:id="@+id/question"
        android:layout_width="371dp"
        android:layout_height="127dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="#F4F4F4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.cardview.widget.CardView>-->


    <ImageButton
        android:id="@+id/idNextView"
        android:layout_width="76dp"
        android:layout_height="52dp"
        android:background="#1C295B"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/navigatexext_foreground"
        tools:layout_editor_absoluteY="-3dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="278dp"
        android:layout_height="254dp"
        android:background="@drawable/bg_txt_white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/progress"
        app:layout_constraintVertical_bias="0.178"
        android:fontFamily="@font/roboto">

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_txt_white"
            android:gravity="center"
            android:fontFamily="@font/roboto"
            android:text="@string/question1"
            android:textAlignment="center"
            android:textColor="#070707"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/nogirarenu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="269dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.539">

        <Button
            android:id="@+id/idopcionEstacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_txt_white"
            android:text="@string/opcionEstacion"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:fontFamily="@font/roboto"
            />

        <Button
            android:id="@+id/idopcionfumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_txt_white"
            android:text="@string/opcionfumar"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:fontFamily="@font/roboto"
            />

        <Button
            android:id="@+id/idopcionGirar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_txt_white"
            android:text="@string/opcionGirar"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:fontFamily="@font/roboto"
            />

        <Button
            android:id="@+id/idopcionstop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/bg_txt_white"
            android:text="@string/opcionstop"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:fontFamily="@font/roboto"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>